added buckets, fixed error with panda

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
       <a-asset-item id="rat" src="assets/rat/scene.gltf"></a-asset-item>
       <a-asset-item id="wolf" src="assets/wolf.obj"></a-asset-item>
-      <a-asset-item id="panda" src="assets/panda.obj"></a-asset-item>
       <a-asset-item id="billy" src="assets/billboard/scene.gltf"></a-asset-item>
       <a-asset-item id="cat" src="assets/cat.obj"></a-asset-item>
       <a-asset-item id="unicorn" src="assets/unicorn.obj"></a-asset-item>
@@ -58,6 +57,7 @@
       <a-asset-item id="rooster" src="assets/rooster/scene.gltf"></a-asset-item>
       <a-asset-item id="doggo" src="assets/doggo/scene.gltf"></a-asset-item>
       <a-asset-item id="panda" src="assets/panda/scene.gltf"></a-asset-item>
+      <a-asset-item id="bucket" src="assets/bucket/scene.gltf"></a-asset-item>
 
       <a-asset-item id="dragon" src="assets/dragon.obj"></a-asset-item>
       <a-asset-item id="throne" src="assets/gameofthrones.obj"></a-asset-item>
@@ -131,6 +131,10 @@
     <a-obj-model src="#cat" color="orange" scale=".09 .09 .09" position="35.15 .14 10.84" rotation="270 270 0"></a-obj-model>
     <a-entity static-body gltf-model="#rooster" position="40.998 0 -22.338" scale=".03 .03 .03"></a-entity>
     <a-entity static-body gltf-model="#doggo" position="34.776 0 -9.655" scale=".5 .5 .5" rotation="0 180 0"></a-entity>
+    <a-entity static-body gltf-model="#bucket" position="37.386 0 -29.661" scale=".05 .05 .05" rotation="0 180 0"></a-entity>
+    <a-entity static-body gltf-model="#bucket" position="29.450 0 -14.710" scale=".07 .07 .07" rotation="0 90 0"></a-entity>
+    <a-entity static-body gltf-model="#bucket" position="42.417 0 2.317" scale=".05 .05 .05"></a-entity>
+
   
     <!-- nate is not last -->
     <a-entity static-body gltf-model="#deer" position="16.891 0 -60.674" scale=".4 .4 .4"></a-entity>
