Outdoor decoration added, added some tires to my room

--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
       <a-asset-item id="rat" src="assets/rat/scene.gltf"></a-asset-item>
       <a-asset-item id="wolf" src="assets/wolf.obj"></a-asset-item>
       <a-asset-item id="billy" src="assets/billboard/scene.gltf"></a-asset-item>
+      <a-asset-item id="tinfence" src="assets/tin_fence/scene.gltf"></a-asset-item>
       <a-asset-item id="cat" src="assets/cat.obj"></a-asset-item>
       <a-asset-item id="unicorn" src="assets/joanne/unicorn.obj"></a-asset-item>
-      <a-asset-item id="road" src="assets/road.obj"></a-asset-item>
+      <a-asset-item id="road" src="assets/road/scene.gltf"></a-asset-item>
+      <a-asset-item id="car" src="assets/car/scene.gltf"></a-asset-item>
+      <a-asset-item id="car2" src="assets/car2/scene.gltf"></a-asset-item>
+      <a-asset-item id="wheels" src="assets/wheels/scene.gltf"></a-asset-item>
       <a-asset-item id="truck" src="assets/truck.obj"></a-asset-item>
       <a-asset-item id="cloud" src="assets/joanne/cloud.obj"></a-asset-item>
 
@@ -115,6 +119,35 @@
     <a-entity static-body gltf-model=#rat position="-10.808 2.129 -14.755" scale="0.025 0.025 0.025" rotation="0 -135 0"></a-entity>
 
     <a-entity static-body gltf-model=#billy position="58.545 -1.348 36.754" scale="2 2 2" rotation="0 45 0"></a-entity>
+
+    <a-entity static-body gltf-model=#road
+     position="-99.474 0.5 161.838" scale="13 3 4" rotation="0 90 0"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#tinfence position="56.389 -4.746 11.535" rotation="0 90 0"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#tinfence position="72.389 -4.746 11.535" rotation="0 90 0"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#tinfence position="88.389 -4.746 11.535" rotation="0 90 0"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#tinfence position="104.389 -4.746 11.535" rotation="0 90 0"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#tinfence position="120.389 -4.746 11.535" rotation="0 90 0"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#tinfence position="136.389 -4.746 11.535" rotation="0 90 0"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#tinfence position="-56.389 -4.746 11.535" rotation="0 90 0"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#tinfence position="-72.389 -4.746 11.535" rotation="0 90 0"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#tinfence position="-126.389 -4.746 11.535" rotation="0 90 0"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#tinfence position="-142.389 -4.746 11.535" rotation="0 90 0"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#car position="63.923 0 56.021" rotation="0 -45 0" scale="0.04 0.04 0.04"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#car2 position="86.067 0 58.063" rotation="0 -45 0" scale="0.1 0.1 0.1"></a-entity>
+
+     <a-entity static-body="sphereRadius:NaN" gltf-model=#wheels position="14.728 0 -12.882" rotation="0 26.527945914557115 0" scale="0.02 0.02 0.02"></a-entity>
 
 
 
