add sides and fix floor

--- a/index.html
+++ b/index.html
@@ -153,15 +153,24 @@
 
     <!-- Jen's section -->
    <a-obj-model static-body src="#wolf" color="#C0C0C0" scale=".005 .005 .005" position="-19.795 0.02 23.302" rotation="0 45 0"></a-obj-model>
+
    <a-obj-model static-body src="#wolf" color="#7c3c0d" scale=".005 .005 .005" position="-24.937 0.02 25.677" rotation="0 28.000 0"></a-obj-model>
+
    <a-obj-model static-body src="#wolf" color="#525456" scale=".005 .005 .005" position="-21.166 0.02 27.431" rotation="0 50 0"></a-obj-model>
+
    <a-obj-model static-body src="#dragon" color="#6b0303" scale=".05 .05 .05" position="-21.460 0.00 18.62" rotation="270 -30 0"></a-obj-model>
+
    <a-obj-model src="#throne" color="#262626" scale=".03 .03 .03" position="-27.000 2.00 17.110" rotation="270 45.000 270"></a-obj-model>
+
    <a-entity gltf-model="#lions" position="-30.00 3.0 25.00" rotation="0 90 0"scale=".06 .06 .06"></a-entity>
 
+
+
    <a-plane src="#snow" height="300" width="300" depth="-2.5" position="-20.000 .2 22.000" rotation="-90 0" scale="0.080 0.085 0"></a-plane>
+
    <a-plane src="#trees" height="300" width="300" depth="-2.5" position="-20.000 2.971 10.145" rotation="0" scale="0.075 0.030 0"></a-plane>
-  
+  <a-plane src="#trees" height="300" width="300" depth="-2.5" position="-30.127 2.971 23.000" rotation="0 90 0" scale="0.085 0.030 0"></a-plane>
+  <a-plane src="#trees" height="300" width="300" depth="-2.5" position="-9.083 2.971 22.402" rotation="0 -90.0 0" scale="0.085 0.030 0"></a-plane>
 
 
 
@@ -212,7 +221,7 @@
 
 
     <!-- joanne's section -->
-    <a-plane static-body src="#rainbow" height="50" width="50" depth="-2.5" position="-34.208 .13 -28.872" rotation="-90 0" scale="0.600 0.800 .06"></a-plane>
+    <a-plane src="#rainbow" height="50" width="50" depth="-2.5" position="-34.208 .13 -28.872" rotation="-90 0" scale="0.600 0.800 .06"></a-plane>
     <a-obj-model src="assets/joanne/cloud.obj" color="white" scale="0.75 0.75 1" position="-40.222 6 -14.382" rotation="90 0 0"></a-obj-model>
     <a-obj-model src="assets/joanne/cloud.obj" color="white" scale="1 1 1" position="-38.19 7 -32.535" rotation="90 0 0"></a-obj-model>
     <a-obj-model src="assets/joanne/cloud.obj" color="white" scale=".5 .5 .5" position="-27.959 7 -24.339" rotation="90 0 0"></a-obj-model>
