got fences to work

--- a/index.html
+++ b/index.html
@@ -102,10 +102,11 @@
     <a-box static-body position="11.13183 0 5.94682" color="red" depth="1" material="" geometry="" scale="15 15 5" src="#briq"></a-box>
 
     <a-box static-body position="-3.52 0 -66.39" color="red" depth="1" material="" geometry="" scale="5 15 33.92" src="#briq"></a-box>
-<!--     <a-box static-body position="11.09 0 -84.27" color="red" depth="1" material="" geometry="" scale="34.25 15 5" src="#briq"></a-box>
-    <a-box static-body position="29.79 0 -78.35" color="red" depth="1" material="" geometry="" scale="5 15 16.79" src="#briq"></a-box>
-    <a-box static-body position="40.25 0 -72.49" color="red" depth="1" material="" geometry="" scale="17.86 15 5" src="#briq"></a-box>
-    <a-box static-body position="46.69 0 -59.56" color="red" depth="1" material="" geometry="" scale="5 15 21.66" src="#briq"></a-box> -->
+
+    <a-box static-body visible="false" position="14.982 0 -86.708" color="red" depth="1" material="" geometry="" scale="34.25 15 5" src="#briq"></a-box>
+    <a-box static-body visible="false" position="33.252 0 -78.350" color="red" depth="1" material="" geometry="" scale="5 15 16.790" src="#briq"></a-box>
+    <a-box static-body visible="false" position="39.619 0 -71.705" color="red" depth="1" material="" geometry="" scale="17.860 15 5" src="#briq"></a-box>
+    <a-box static-body visible="false" position="51.406 0 -59.560" color="red" depth="1" material="" geometry="" scale="5 15 21.660" src="#briq"></a-box>
 
     <a-box static-body position="-20.43404 0 -34.9838" color="white" depth="1" material="" geometry="" scale="30 15 5" src="#rainbow" rotation="0 90"></a-box>
     <a-box static-body position="0 7.5" color="grey" depth="1" material="" geometry="" scale="100 2 105" src="#hard" visible=""></a-box>
@@ -177,9 +178,7 @@
 
     <!-- nate is not last -->
     <a-entity gltf-model="#deer" position="13.790 0 -55.935" rotation="0 136.354 0" scale=".4 .4 .4"></a-entity>
-    <a-entity gltf-model="#fountain" position="8.345 0 -62.416" scale="3 3 3"></a-entity>
-<!--     <a-entity gltf-model="#grass" position="3.791 0 -69.118" scale="1 1 1"></a-entity>
- -->    
+    <a-entity gltf-model="#fountain" position="8.345 0 -62.416" scale="3 3 3"></a-entity>  
     <a-entity gltf-model="#mushroom" position="251.000 0.2 -92.000" scale="5 5 5"></a-entity>
     <a-entity gltf-model="#mushroom" position="152.000 0.2 -81.000" scale="3 3 3"></a-entity>
     <a-entity gltf-model="#mushroom" position="293.000 0.2 -80.000" scale="5 5 5"></a-entity>
@@ -212,7 +211,7 @@
 
 
     <!-- joanne's section -->
-    <a-plane static-body src="#rainbow" height="50" width="50" depth="-2.5" position="-34.208 .13 -28.872" rotation="-90 0" scale="0.600 0.800 .06"></a-plane>
+    <a-plane src="#rainbow" height="50" width="50" depth="-2.5" position="-34.208 .13 -28.872" rotation="-90 0" scale="0.600 0.800 .06"></a-plane>
     <a-obj-model src="assets/joanne/cloud.obj" color="white" scale="0.75 0.75 1" position="-40.222 6 -14.382" rotation="90 0 0"></a-obj-model>
     <a-obj-model src="assets/joanne/cloud.obj" color="white" scale="1 1 1" position="-38.19 7 -32.535" rotation="90 0 0"></a-obj-model>
     <a-obj-model src="assets/joanne/cloud.obj" color="white" scale=".5 .5 .5" position="-27.959 7 -24.339" rotation="90 0 0"></a-obj-model>
