fix HTML errors

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
     <!-- _______________________________________________________________________________ -->
     <!--Textures from images-->
     <a-assets>
-      <img id="ded" src="img/ded.jpg">
-      <img id="sky" src="img/sky.jpg">
-      <img id="briq" src="img/briq.jpeg">
-      <img id="hard" src="img/hard.jpg">
-      <img id="mazemap" src="img/tinymaze.jpg">
-      <img id="shiny" src="img/shiny.jpg">
-      <img id="meadow" src="img/meadow.jpg">
-      <img id="rainbow" src="img/rainbow.jpg">
-      <img id="stone" src="img/stone.jpg">
-      <img id="snow" src="img/snow.jpg">
-      <img id="trees" src="img/trees.jpg">
-      <img id="city" src="img/city.jpg">
+      <img id="ded" src="img/ded.jpg" alt = "Dead_Grass">
+      <img id="sky" src="img/sky.jpg" alt = "sky">
+      <img id="briq" src="img/briq.jpeg" alt = "brick">
+      <img id="hard" src="img/hard.jpg" alt = "celling">
+      <img id="mazemap" src="img/tinymaze.jpg" alt="maze">
+      <img id="shiny" src="img/shiny.jpg" alt="shiny">
+      <img id="meadow" src="img/meadow.jpg" alt="meadow">
+      <img id="rainbow" src="img/rainbow.jpg" alt="rainbow">
+      <img id="stone" src="img/stone.jpg" alt="stone">
+      <img id="snow" src="img/snow.jpg" alt="snow">
+      <img id="trees" src="img/trees.jpg" alt="trees">
+      <img id="city" src="img/city.jpg" alt="city">
 
       <a-asset-item id="rat" src="assets/rat/scene.gltf"></a-asset-item>
       <a-asset-item id="wolf" src="assets/wolf.obj"></a-asset-item>
@@ -60,7 +60,6 @@
       <a-asset-item id="squirrel" src="assets/squirrel/scene.gltf"></a-asset-item>
       <a-asset-item id="treeone" src="assets/treeone/scene.gltf"></a-asset-item>
       <a-asset-item id="treetwo" src="assets/treetwo/scene.gltf"></a-asset-item>
-      <a-asset-item id="treethree" src="assets/treethree/scene.gltf"></a-asset-item>
       <a-asset-item id="treethree" src="assets/treethree/scene.gltf"></a-asset-item>
       <a-asset-item id="fence2" src="assets/fence/scene.gltf"></a-asset-item>
 
@@ -178,7 +177,7 @@
 
    <a-obj-model src="#throne" color="#262626" scale=".03 .03 .03" position="-27.000 2.00 17.110" rotation="270 45.000 270"></a-obj-model>
 
-   <a-entity gltf-model="#lions" position="-30.00 3.0 25.00" rotation="0 90 0"scale=".06 .06 .06"></a-entity>
+   <a-entity gltf-model="#lions" position="-30.00 3.0 25.00" rotation="0 90 0" scale=".06 .06 .06"></a-entity>
 
 
 
